# cpurast

./: .snippets  CMakeLists.txt  LICENSE  README.md
cpurast/: CMakeLists.txt  canvas.hpp  color.hpp  context.cpp  context.hpp  cpurast.cpp  cpurast.hpp  default_fs.hpp  default_shader.hpp  default_vs.hpp  empty_vs.hpp  fragment_shader.hpp  framebuf.cpp  framebuf.hpp  position.hpp  rasterizer.cpp  rasterizer.hpp  renderer.cpp  renderer.hpp  shader.hpp  util.hpp  vertex.hpp  vertex_shader.hpp  viewport.hpp
cpurast/canvas/: canvas.hpp  sdl_canvas.cpp  sdl_canvas.hpp
cpurast/canvas/sdl/: CMakeLists.txt  cpurast_sdl.hpp  sdl_canvas.cpp  sdl_canvas.hpp
cpurast/sdl_canvas/: CMakeLists.txt  cpurast_sdl.cpp  cpurast_sdl.hpp  sdl_canvas.cpp  sdl_canvas.hpp
examples/grid/: CMakeLists.txt  main.cpp
examples/line/: CMakeLists.txt  main.cpp
examples/square/: CMakeLists.txt  main.cpp
examples/triangle/: CMakeLists.txt  main.cpp  main_vs.hpp
shaders/: CMakeLists.txt  color_shader.hpp
swrast/: swrast.cpp  swrast.hpp
